# MidiParser

./: .gitignore  README.md  pyproject.toml
src/midi_parser/: __init__.py  __main__.py  app.py  assess.py  checkpoint.py  collect.py  icons.py  job_checkpoint.py  name_hints.py  organize.py  progress.py  scan.py  session.py  theme.py  util.py
tests/: test_assess.py  test_checkpoint.py  test_collect.py  test_job_checkpoint.py  test_name_hints.py  test_progress.py  test_session.py
