[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midi-parser"
version = "0.1.0"
description = "Visual MIDI organizer that classifies clips into Drums, Bass, Lead, Chords, Arp, and Unknown"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3.0",
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
midi-organize = "midi_parser.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
